# files-ipc

./: Cargo.toml
.github/workflows/: release-unstable.yaml
src/: api.rs  main.rs  rpc.rs  types.rs  utils.rs
src/rpc/: fun.rs  types.rs
