[package]
name = "files-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "io-std"] }
files = { git = "https://github.com/SCJangra/files.git", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
jsonrpc-core = "18.0"
jsonrpc-ipc-server = "18.0"
jsonrpc-pubsub = "18.0"
jsonrpc-derive = "18.0"
futures = "0.3"
lazy_static = "1.4"
unwrap_or = "1.0"
