[package]
name = "files-ipc"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "io-std"] }
files = { git = "https://github.com/SCJangra/files.git", features = ["google_drive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
futures = "0.3"
